--- a/.cookiecutterrc
+++ b/.cookiecutterrc
@@ -29,5 +29,5 @@ default_context:
     use_pypi_deployment_with_travis: y
     use_pytest: y
     use_requiresio: y
-    version: 0.3.0-dev
+    version: 0.4.0
     year: 2017
