--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,13 @@
 # This file will be regenerated if you run travis_pypi_setup.py
 
 language: python
-python: 3.5
+python:
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"      # current default Python on Travis CI
+  - "3.7"
 sudo: false
-
-env:
-  - TOXENV=py37
-  - TOXENV=py36
-  - TOXENV=py35
-  - TOXENV=py27
-  - TOXENV=pypy
-
-matrix:
-  allow_failures:
-    - env: TOXENV=pypy
 
 before_install:
   - python --version
